# localghost

./: CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md
app/android/: .gitignore  BUILD_LINUX.md  BUILD_NOTES.md  GRADLE_ADDITIONS.md  GRADLE_VERIFY_ADDITIONS.md  LIBS_REVIEW.md  VERIFY.md  WORKMANAGER_CATALOG.md  settings.gradle.kts
app/android/app/: build.gradle.kts
app/android/app/src/androidTest/java/com/localghost/app/: ExampleInstrumentedTest.kt
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/android/app/src/main/java/com/localghost/app/: LocalGhostApp.kt  MainActivity.kt
app/android/app/src/main/java/com/localghost/app/chat/: Message.kt
app/android/app/src/main/java/com/localghost/app/debug/: CrashHandler.kt
app/android/app/src/main/java/com/localghost/app/local/: LocalModel.kt  ModelDownloadWorker.kt  ModelStore.kt  ModelVerifier.kt  NativeLlama.kt
app/android/app/src/main/java/com/localghost/app/net/: BoxClient.kt  BoxDataSource.kt  BoxHttp.kt  EnrollLink.kt  UnlockStream.kt  VideoProxy.kt
app/android/app/src/main/java/com/localghost/app/notify/: Daemon.kt  MuteReceiver.kt  (+4 more)
app/android/app/src/main/res/drawable/: ic_eye.xml  ic_eye_off.xml  ic_ghost.xml  ic_ghost_notif.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/android/app/src/main/res/xml/: data_extraction_rules.xml  network_security_config.xml
app/android/app/src/test/java/com/localghost/app/: ExampleUnitTest.kt
app/android/docs/: architecture.md
app/android/gradle/: libs.versions.toml
app/android/gradle/wrapper/: gradle-wrapper.properties
app/android/tools/: debian_setup.sh  release.sh  sign_source.sh  verify_source.sh
cmd/framed/: README.md
cmd/noted/: README.md
cmd/synthd/: README.md
cmd/tallyd/: README.md
cmd/voiced/: README.md
docs/: SECURITY.md
server/: README.md  go.mod  go.sum
server/cmd/ghost-ctl/: main.go
server/cmd/ghost-qr/: main.go
server/cmd/ghost-setup/: main.go
server/cmd/ghost-tpmreset/: main.go
server/cmd/ghost.framed/: main.go
server/cmd/ghost.oracled/: main.go
server/cmd/ghost.secd/: main.go
server/cmd/ghost.synthd/: main.go
server/cmd/ghost.watchd/: main.go
server/docs/: TODO.md
server/internal/framed/: pipeline.go  sniff.go  store.go
server/internal/hw/: daemon_registry.go  datastore.go  dmcrypt.go  lockout.go  notifstore.go  tpm.go
server/internal/oracled/: backend.go
server/internal/pair/: command.go  enrolllink.go  pairing.go  parse.go  qrencode_test.go
server/internal/profile/: unlock_stream.go
server/internal/search/: embedspawn.go  worker.go
server/internal/secd/: backend.go  backend_impl.go  backend_shared.go  chat_http.go  chats_http.go  enroll.go  frames_http.go  notifications.go  sdnotify.go  server.go  server_test.go  stats.go  status_http.go  status_type.go  unlock.go
server/internal/setup/: plan.go  steps_test.go  systemd.go
server/internal/setup/debian/: pki.go  system.go
server/internal/watchd/: client.go  control.go  stats.go  supervisor.go
server/tools/: README.md  bundle_db_runtime.sh  bundle_ffmpeg.sh  health.sh  ns.sh  redeploy.sh  server_setup_root.sh  server_setup_user.sh  setup_llama.sh  stage_models.sh
(+46 files in other folders)
